test/files/neg/t7299.check
t7299.scala:4: error: functions may not have more than 22 parameters; method f cannot be eta-expanded because it takes 23 arguments
   val eta1 = f _
              ^
t7299.scala:5: error: functions may not have more than 22 parameters; method g cannot be eta-expanded because it takes 23 arguments
   val eta2 = g[Any] _
               ^
2 errors
